--- a/.github/workflows/cml.yml
+++ b/.github/workflows/cml.yml
@@ -18,9 +18,7 @@ jobs:
           dvc repro
 
           # Report metrics
-          #echo "## Metrics" >> report.md
-          #git fetch --prune
-          #dvc metrics diff master --show-md >> report.md
+          dvc metrics diff master --show-md >> report.md
 
 
-          #cml send-comment report.md
+          cml send-comment report.md
