--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -1,4 +1,4 @@
-name: aws-deploy
+name: cml-aws-deploy
 
 on: [push]
 
@@ -13,7 +13,7 @@ jobs:
       - name: deploy
         shell: bash
         env:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          repo_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
@@ -37,7 +37,7 @@ jobs:
 
     - name: cml
       env:
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        repo_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
       run: |
         python --version
         pip install -r requirements.txt
