--- a/.github/workflows/cml.yml
+++ b/.github/workflows/cml.yml
@@ -20,6 +20,6 @@ jobs:
           git config --global --add safe.directory /__w/MLOpsPSet2Git/MLOpsPSet2Git
           
           git fetch --prune
-          dvc metrics diff master --show-md >> README.md
-
+          # dvc metrics diff master --show-md >> README.md
+          dvc metrics diff --show-md $DEFAULT_BRANCH >> report.md
 
